pages/style.css
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px white inset !important;
}

input::-ms-reveal,
      input::-ms-clear {
        display: none;
      }

* {
    font-family: 'Inika', sans-serif;
  }

  body {
    background-color: #f8f8f9;
    padding: 2em;
  }

.containerBoxSmall {
  outline: 0;
  border: 0;
  cursor: pointer;
  border-radius: 1vw;
  padding: 0.5vw 1vw;
  font-weight: 700;
  box-shadow: 
    -.3vw 0 0 0 #000000 inset, 
    0 -.3vw 0 0 #000000 inset, 
    0 0 0 .15vw #000000 inset;
}

.containerBoxLarge {
  outline: 0;
  border: 0;
  cursor: pointer;
  border-radius: 2vw;
  padding: 0.5vw 1vw;
  font-weight: 700;
  box-shadow: 
  -.8vw 0 0 0 #000000 inset, 
    0 -.8vw 0 0 #000000 inset, 
    0 0 0 .4vw #000000 inset;
}

.button {
  cursor: pointer;
}

.markedAsImportant {
  color: white;
  fill: white;
  background-color: purple;
}

.notMarkedAsImportant {
  color: black;
  fill: black;
  background-color: white;
}

